[gd_scene load_steps=3 format=2]

[ext_resource path="res://actor/gun/Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor/gun/RapidBurstGun.gd" type="Script" id=2]

[node name="RapidBurstGun" instance=ExtResource( 1 )]
script = ExtResource( 2 )
bullet_type = null
spread = 5.0

[node name="DurationTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="FireRateTimer" type="Timer" parent="." index="5"]
wait_time = 0.1
[connection signal="timeout" from="DurationTimer" to="CooldownTimer" method="start"]
[connection signal="timeout" from="DurationTimer" to="FireRateTimer" method="stop"]
[connection signal="timeout" from="FireRateTimer" to="." method="_create_bullet"]
